# GGJ_2021

./: .gitignore  Ue4_Notes.txt
GGJ_2021/: CMakeLists.txt  GGJ_2021.code-workspace  GGJ_2021.pro  GGJ_2021.uproject  GGJ_2021CodeCompletionFolders.txt  GGJ_2021Config.pri  GGJ_2021Header.pri  GGJ_2021Includes.pri  GGJ_2021Source.pri  Makefile
GGJ_2021/Binaries/Win64/: GGJ_2021Editor.target  UE4Editor.modules
GGJ_2021/Config/: DefaultEngine.ini  DefaultGame.ini  steamvr_ue_editor_app.json
GGJ_2021/Content/Blueprints/: BasePlayerController.uasset  FancyHexTile.uasset  HexGameMode.uasset  HexGrid.uasset  HexTile.uasset
GGJ_2021/Content/Meshes/: HexTile_mesh.uasset  lambert2.uasset
GGJ_2021/Content/StarterContent/Architecture/: Floor_400x400.uasset
GGJ_2021/Content/ThirdPersonCPP/Maps/: ThirdPersonExampleMap.umap
GGJ_2021/Saved/Config/Windows/: EditorPerProjectUserSettings.ini
GGJ_2021/Source/: GGJ_2021.Target.cs  GGJ_2021Editor.Target.cs
GGJ_2021/Source/GGJ_2021/: GGJ_2021.Build.cs  GGJ_2021.cpp  GGJ_2021Character.cpp  GGJ_2021Character.h  GGJ_2021GameMode.cpp  GGJ_2021GameMode.h  HexPlayerController.cpp  HexPlayerController.h
GGJ_2021/Source/GGJ_2021/Networking/: NetworkClient.cpp  NetworkClient.h
GGJ_2021_Server/: Cargo.toml
GGJ_2021_Server/src/: error.rs  main.rs  settings.rs
GGJ_2021_Server/src/client_updates/: mod.rs  pong.rs
GGJ_2021_Server/src/game_actions/: game_action.rs  mod.rs  ping.rs
GGJ_2021_Server/src/gameserver/: client_connection.rs  gameserver.rs  mod.rs
GGJ_2021_Server/src/gamestate/: gamestate.rs  mod.rs
(+17 files in other folders)
