[package]
name = "ggj2021_server"
version = "0.1.0"
authors = ["Linden Krouse <ztaticnull@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = { version = "0.8" }
clap = { version = "3.0.0-beta.2"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["full"]}
bytes = "*"
async-channel = "1.5"